shopping cart complete

--- a/index.html
+++ b/index.html
@@ -779,10 +779,10 @@
       <div class="container">
          <section class="footer_wrapper">
             <div class="about_us">
-               <div class="shop-name">
+               <a class="shop-name" href="index.html">
                   <img src="img/logo.png" alt="logo">
                   <h3>BRAN<span>D</span></h3>
-               </div>
+               </a>
                <p>Objectively transition extensive data rather than cross functional solutions. Monotonectally
                   syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded
                   array of processes and cross-unit partnerships.
@@ -793,31 +793,31 @@
             <div class="company">
                <h4>COMPANY</h4>
                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="#">Shop</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">How It Works</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a class="footer_wrapper-nav" href="index.html">Home</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Shop</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">About</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">How It Works</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Contact</a></li>
                </ul>
             </div>
             <div class="information">
                <h4>INFORMATION</h4>
                <ul>
-                  <li><a href="#">Tearms & Condition</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">How to Buy</a></li>
-                  <li><a href="#">How to Sell</a></li>
-                  <li><a href="#">Promotion</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Tearms & Condition</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Privacy Policy</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">How to Buy</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">How to Sell</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Promotion</a></li>
                </ul>
             </div>
             <div class="shop_cat">
                <h4>SHOP CATEGORY</h4>
                <ul>
-                  <li><a href="#">Men</a></li>
-                  <li><a href="#">Women</a></li>
-                  <li><a href="#">Child</a></li>
-                  <li><a href="#">Apparel</a></li>
-                  <li><a href="#">Brows All</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Men</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Women</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Child</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Apparel</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Brows All</a></li>
                </ul>
             </div>
          </section>
