--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -528,17 +528,18 @@
 
             <!-- Row one  -->
             <div class="cart-row cart-row_hover">
-               <div class="cart-product cart-grid1">
+               <a href="single-page.html" class="cart-product cart-grid1">
                   <img class="cart-product_img" src="img/shopping cart/cart1.jpg" alt="product">
                   <h4 class="cart-product_header">Mango People T-shirt</h4>
                   <p class="cart-product-options">Color: <span class="cart-product-options_span">Red</span></p>
                   <p class="cart-product-options">Size: <span class="cart-product-options_span">Xll</span></p>
-               </div>
+               </a>
                <div class="cart-price cart-position cart-grid2">
                   $150
                </div>
                <div class="cart-quantity cart-position cart-grid3">
-                  <input class="cart-quantity_input" type="number" name="quantity" id="cart-quantity" required min="0">
+                  <input class="cart-quantity_input" type="number" name="quantity" value="1" id="cart-quantity" required
+                     min="0">
                </div>
                <div class="cart-ship cart-position cart-grid4">
                   FREE
@@ -553,17 +554,18 @@
 
             <!-- Row two  -->
             <div class="cart-row cart-row_hover">
-               <div class="cart-product cart-grid1">
+               <a href="single-page.html" class="cart-product cart-grid1">
                   <img class="cart-product_img" src="img/shopping cart/cart2.jpg" alt="product">
                   <h4 class="cart-product_header">Mango People T-shirt</h4>
                   <p class="cart-product-options">Color: <span class="cart-product-options_span">Red</span></p>
                   <p class="cart-product-options">Size: <span class="cart-product-options_span">Xll</span></p>
-               </div>
+               </a>
                <div class="cart-price cart-position cart-grid2">
                   $150
                </div>
                <div class="cart-quantity cart-position cart-grid3">
-                  <input class="cart-quantity_input" type="number" name="quantity" id="cart-quantity" required min="0">
+                  <input class="cart-quantity_input" type="number" value="1" name="quantity" id="cart-quantity" required
+                     min="0">
                </div>
                <div class="cart-ship cart-position cart-grid4">
                   FREE
@@ -578,17 +580,18 @@
 
             <!-- Row three  -->
             <div class="cart-row cart-row_hover">
-               <div class="cart-product cart-grid1">
+               <a href="single-page.html" class="cart-product cart-grid1">
                   <img class="cart-product_img" src="img/shopping cart/cart3.jpg" alt="product">
                   <h4 class="cart-product_header">Mango People T-shirt</h4>
                   <p class="cart-product-options">Color: <span class="cart-product-options_span">Red</span></p>
                   <p class="cart-product-options">Size: <span class="cart-product-options_span">Xll</span></p>
-               </div>
+               </a>
                <div class="cart-price cart-position cart-grid2">
                   $150
                </div>
                <div class="cart-quantity cart-position cart-grid3">
-                  <input class="cart-quantity_input" type="number" name="quantity" id="cart-quantity" required min="0">
+                  <input class="cart-quantity_input" type="number" value="1" name="quantity" id="cart-quantity" required
+                     min="0">
                </div>
                <div class="cart-ship cart-position cart-grid4">
                   FREE
@@ -600,8 +603,49 @@
                   <i class="fas fa-times-circle"></i>
                </div>
             </div>
+            <!-- Buttons -->
+            <div class="cart-button">
+               <a href="#" class="cart-button-clear">cLEAR SHOPPING CART</a>
+               <a href="#" class="cart-button-continue">cONTINUE sHOPPING</a>
+            </div>
 
          </div> <!-- Shopping cart end -->
+
+         <!-- Order info  -->
+         <div class="orderInfo">
+            <!-- Adress  -->
+            <div class="orderInfo-adress">
+               <h3 class="orderInfo-title">Shipping Adress</h3>
+               <form class="orderInfo-form" action="#" method="post">
+                  <select class="orderInfo-form_item" name="country" id="country">
+                     <option value="russia">russia</option>
+                     <option value="usa">usa</option>
+                     <option value="canada">canada</option>
+                     <option value="new zeeland">new zeeland</option>
+                  </select>
+                  <input class="orderInfo-form_item" placeholder="State" type="text">
+                  <input class="orderInfo-form_item" placeholder="Postcode / Zip" type="text">
+                  <button class="orderInfo-form_button">get a quote</button>
+               </form>
+            </div> <!-- Adress end  -->
+            <!-- Discount  -->
+            <div class="orderInfo-discount">
+               <h3 class="orderInfo-title">coupon discount</h3>
+               <p class="orderInfo-text">Enter your coupon code if you have one</p>
+               <form class="orderInfo-form" action="#" method="post">
+                  <input class="orderInfo-form_item" placeholder="State" type="text">
+                  <button class="orderInfo-form_button">Apply coupon</button>
+               </form>
+            </div> <!-- Discount end  -->
+            <!-- Total  -->
+            <div class="orderInfo-total">
+               <h4 class="orderInfo-subTitle">Sub total <span class="orderInfo-title__pl">$900</span></h4>
+               <h3 class="orderInfo-title orderInfo-title__pd">GRAND TOTAL<span
+                     class="orderInfo-title--span orderInfo-title__pl">$900</span></h3>
+               <a class="orderInfo-total-button" href="#">proceed to checkout</a>
+            </div> <!-- Total end  -->
+         </div> <!-- Order info end  -->
+
 
       </div> <!-- Container end -->
 
@@ -642,10 +686,10 @@
       <div class="container">
          <section class="footer_wrapper">
             <div class="about_us">
-               <div class="shop-name">
+               <a class="shop-name" href="index.html">
                   <img src="img/logo.png" alt="logo">
                   <h3>BRAN<span>D</span></h3>
-               </div>
+               </a>
                <p>Objectively transition extensive data rather than cross functional solutions. Monotonectally
                   syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded
                   array of processes and cross-unit partnerships.
@@ -656,31 +700,31 @@
             <div class="company">
                <h4>COMPANY</h4>
                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="#">Shop</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">How It Works</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a class="footer_wrapper-nav" href="index.html">Home</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Shop</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">About</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">How It Works</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Contact</a></li>
                </ul>
             </div>
             <div class="information">
                <h4>INFORMATION</h4>
                <ul>
-                  <li><a href="#">Tearms & Condition</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">How to Buy</a></li>
-                  <li><a href="#">How to Sell</a></li>
-                  <li><a href="#">Promotion</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Tearms & Condition</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Privacy Policy</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">How to Buy</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">How to Sell</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Promotion</a></li>
                </ul>
             </div>
             <div class="shop_cat">
                <h4>SHOP CATEGORY</h4>
                <ul>
-                  <li><a href="#">Men</a></li>
-                  <li><a href="#">Women</a></li>
-                  <li><a href="#">Child</a></li>
-                  <li><a href="#">Apparel</a></li>
-                  <li><a href="#">Brows All</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Men</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Women</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Child</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Apparel</a></li>
+                  <li><a class="footer_wrapper-nav" href="#">Brows All</a></li>
                </ul>
             </div>
          </section>
